--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -23,7 +23,7 @@ end
 group :test do
   gem 'rails-controller-testing', '0.1.1'
   gem 'minitest-reporters', '1.1.9'
-  gem 'guard', '2.13.0'
+  gem 'guard', '2.13.0' # grard 自动化测试
   gem 'guard-minitest', '2.4.4'
 end
 
