--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -1,5 +1,9 @@
 source 'https://rubygems.org'
 gem 'rails', '5.0.1'
+gem 'bcrypt', '3.1.11'
+# gem 'bcrypt-ruby', '3.1.11', :require => 'bcrypt'
+# Use ActiveModel has_secure_password
+# gem 'bcrypt', '~> 3.1.7'
 gem 'bootstrap-sass', '3.3.6'
 gem 'puma', '3.4.0'
 gem 'sass-rails', '5.0.6'
