--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -4,6 +4,7 @@ gem 'bcrypt', '3.1.11'
 # gem 'bcrypt-ruby', '3.1.11', :require => 'bcrypt'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
+gem 'faker', '1.6.6' # 示例用户
 gem 'bootstrap-sass', '3.3.6'
 gem 'puma', '3.4.0'
 gem 'sass-rails', '5.0.6'
