--- a/sample_app/test/fixtures/users.yml
+++ b/sample_app/test/fixtures/users.yml
@@ -6,6 +6,7 @@ michael:
   name: Michael Hartl
   email: mhartl@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 archer:
   name: Sterling Archer
